--- a/crucible-test/byt.conf
+++ b/crucible-test/byt.conf
@@ -43,6 +43,7 @@ func.miptree.r8g8b8a8-unorm.aspect-color.view-2d.levels01.array02.extent-512x512
 func.miptree.r8g8b8a8-unorm.aspect-color.view-2d.levels02.array02.extent-512x512.upload-copy-with-draw.download-copy-to-buffer = mesa 442dff8
 func.gs.basic = mesa 998829f
 func.desc.dynamic.storage-buffer = mesa 593731e
+func.first = mesa 5a165b4086d0bb2fab26ebae3d78e2732eeb8f57
 
 [fixed-tests]
 func.cmd-buffer.large-secondary-no-simultaneous = mesa a8cdef3
@@ -73,6 +74,5 @@ func.compute.local-id.push-constant = crucible 99333e8
 func.compute.local-id.basic = crucible 99333e8
 func.compute.local-id.local-ids = crucible 99333e8
 func.compute.num-workgroups.indirect = crucible 99333e8
-func.first = crucible 037ef67
 func.cmd-buffer.small-secondaries = mesa aeceec54a86d26aad165a1ade67a8aba61ae080f
 
