services: increase reboot timeout
The 6 minute timeout was short enough to trigger a reboot during bios
update, or when slow SDP systems were struggling to boot.

--- a/services/reboot_hung_systems/config.json
+++ b/services/reboot_hung_systems/config.json
@@ -6,7 +6,11 @@
         "otc-gfxtest-bsw-04.local": {"switch": 1, "outlet": 4},
         "otc-gfxtest-bsw-05.local": {"switch": 1, "outlet": 5},
         "otc-gfxtest-bsw-06.local": {"switch": 1, "outlet": 6},
-        "otc-gfxtest-bxt-03.local": {"switch": 2, "outlet": 3}
+        "otc-gfxtest-bsw-07.local": {"switch": 1, "outlet": 7},
+        "otc-gfxtest-bsw-07.local": {"switch": 1, "outlet": 8},
+        "otc-gfxtest-glk-01.local": {"switch": 2, "outlet": 1},
+        "otc-gfxtest-glk-02.local": {"switch": 2, "outlet": 2},
+        "otc-gfxtest-bsw-09.local": {"switch": 2, "outlet": 3}
     },
     "switches": {
         "1": {
