--- a/vulkancts-test/bxt.conf
+++ b/vulkancts-test/bxt.conf
@@ -19,9 +19,6 @@ dEQP-VK.texture.mipmap.2d.projected.nearest_linear_repeat = vulkancts 319e6ccec3
 dEQP-VK.texture.mipmap.2d.projected.nearest_nearest_clamp = vulkancts 319e6ccec333bd541bbc16f7300aa5fc0e3fceb6
 dEQP-VK.texture.mipmap.2d.projected.nearest_nearest_mirror = vulkancts 319e6ccec333bd541bbc16f7300aa5fc0e3fceb6
 dEQP-VK.texture.mipmap.2d.projected.nearest_nearest_repeat = vulkancts 319e6ccec333bd541bbc16f7300aa5fc0e3fceb6
-dEQP-VK.memory.pipeline_barrier.transfer_src_transfer_dst.65536 = vulkancts 319e6ccec333bd541bbc16f7300aa5fc0e3fceb6
-dEQP-VK.memory.pipeline_barrier.transfer_src_transfer_dst.1048576 = vulkancts 319e6ccec333bd541bbc16f7300aa5fc0e3fceb6
-dEQP-VK.memory.pipeline_barrier.transfer_src_transfer_dst.8192 = vulkancts 319e6ccec333bd541bbc16f7300aa5fc0e3fceb6
 dEQP-VK.api.info.android.no_unknown_extensions = mesa 032861693eb311bb1b847b988ac8c395ebadb1a2
 dEQP-VK.api.copy_and_blit.resolve_image.with_regions_2_bit = mesa 75edecf5020a9b833ff7e2929f64ceb11c9df679
 dEQP-VK.api.copy_and_blit.resolve_image.partial_4_bit = mesa 75edecf5020a9b833ff7e2929f64ceb11c9df679
@@ -1076,4 +1073,7 @@ dEQP-VK.query_pool.occlusion_query.get_results_conservative_size_64_wait_query_w
 dEQP-VK.query_pool.occlusion_query.get_results_conservative_size_32_wait_query_with_availability_draw_points = mesa 4e17b59f6cea79df078f553376b0392fbbf1ae0a
 dEQP-VK.query_pool.occlusion_query.get_results_conservative_size_64_wait_query_without_availability_draw_points = mesa 4e17b59f6cea79df078f553376b0392fbbf1ae0a
 dEQP-VK.glsl.builtin.precision.reflect.highp_compute.scalar = vulkancts bdfbb3240884bbed9bc79426e0fee838978d1e34
+dEQP-VK.memory.pipeline_barrier.transfer_src_transfer_dst.65536 = mesa 75edecf5020a9b833ff7e2929f64ceb11c9df679
+dEQP-VK.memory.pipeline_barrier.transfer_src_transfer_dst.1048576 = mesa 75edecf5020a9b833ff7e2929f64ceb11c9df679
+dEQP-VK.memory.pipeline_barrier.transfer_src_transfer_dst.8192 = mesa 75edecf5020a9b833ff7e2929f64ceb11c9df679
 
