--- a/services/reboot_hung_systems/config.json
+++ b/services/reboot_hung_systems/config.json
@@ -8,10 +8,13 @@
         "otc-gfxtest-bsw-06.local": {"switch": 1, "outlet": 6},
         "otc-gfxtest-bsw-07.local": {"switch": 1, "outlet": 7},
         "otc-gfxtest-bsw-08.local": {"switch": 1, "outlet": 8},
+        "otc-gfxtest-bsw-09.local": {"switch": 2, "outlet": 7},
         "otc-gfxtest-glk-01.local": {"switch": 2, "outlet": 1},
         "otc-gfxtest-glk-02.local": {"switch": 2, "outlet": 2},
-        "otc-gfxtest-bsw-09.local": {"switch": 2, "outlet": 3},
-        "otc-gfxtest-glk-03.local": {"switch": 2, "outlet": 5}
+        "otc-gfxtest-glk-03.local": {"switch": 2, "outlet": 3},
+        "otc-gfxtest-glk-04.local": {"switch": 2, "outlet": 4},
+        "otc-gfxtest-glk-05.local": {"switch": 2, "outlet": 5},
+        "otc-gfxtest-glk-06.local": {"switch": 2, "outlet": 6}
     },
     "switches": {
         "1": {
