mesa jenkins updates due to mesa=9a9c7e45
Return-Path: <mesa_jenkins@intel.com>
Delivered-To: unknown
Received: from imapmail.intel.com (10.22.226.38:993) by snoopy.jf.intel.com
  with IMAP4-SSL; 14 Jul 2017 18:43:38 -0000
Received: from fmsmsx103.amr.corp.intel.com (10.18.124.201) by
 ORSMSX110.amr.corp.intel.com (10.22.240.8) with Microsoft SMTP Server (TLS)
 id 14.3.319.2; Fri, 14 Jul 2017 11:39:30 -0700
Received: from orsmga001.jf.intel.com (10.7.209.18) by
 fmsmsx103-2.cps.intel.com (10.18.124.210) with Microsoft SMTP Server id
 14.3.319.2; Fri, 14 Jul 2017 11:39:30 -0700
Message-ID: <e624e2$12a82of@orsmga001.jf.intel.com>
Date: Fri, 14 Jul 2017 11:39:30 -0700
X-ExtLoop1: 1
X-IronPort-AV: E=Sophos;i="5.40,359,1496127600";
   d="scan'208";a="1151601423"
Received: from otc-mesa-ci.jf.intel.com ([10.54.30.42])  by
 orsmga001.jf.intel.com with ESMTP; 14 Jul 2017 11:39:30 -0700
Subject: [PATCH] mesa jenkins updates due to mesa=9a9c7e45
From: Do Not Reply <mesa_jenkins@intel.com>
To: <mark.a.janes@intel.com>, <mirlan.ax.tokonbekov@intel.com>
X-MS-Exchange-Organization-AuthSource: FMSMSX103.amr.corp.intel.com
X-MS-Exchange-Organization-AuthAs: Internal
X-MS-Exchange-Organization-AuthMechanism: 10
X-MS-Exchange-Organization-AVStamp-Mailbox: NAI;59093716;0;novirus
X-getmail-retrieved-from-mailbox: INBOX
Content-Type: text/plain
MIME-Version: 1.0

--- a/glescts-test/g965.conf
+++ b/glescts-test/g965.conf
@@ -2,34 +2,6 @@
 ES2-CTS.functional.clipping.point.wide_point_clip
 ES2-CTS.functional.fbo.completeness.renderable.texture.depth.rgb_unsigned_int_2_10_10_10_rev
 ES2-CTS.functional.fbo.completeness.renderable.texture.stencil.rgb_unsigned_int_2_10_10_10_rev
-ES2-CTS.functional.fbo.render.recreate_colorbuffer.no_rebind_rbo_rgb565_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_colorbuffer.no_rebind_rbo_rgb5_a1_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_colorbuffer.no_rebind_rbo_rgba4_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_rbo_rgb565_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_rbo_rgb5_a1_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_rbo_rgba4_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_tex2d_rgb_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_tex2d_rgba_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_rbo_rgb565_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_rbo_rgb5_a1_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_rbo_rgba4_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_tex2d_rgb_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_tex2d_rgba_stencil_index8
-ES2-CTS.functional.fbo.render.resize.rbo_rgb565_stencil_index8
-ES2-CTS.functional.fbo.render.resize.rbo_rgb5_a1_stencil_index8
-ES2-CTS.functional.fbo.render.resize.rbo_rgba4_stencil_index8
-ES2-CTS.functional.fbo.render.resize.tex2d_rgb_stencil_index8
-ES2-CTS.functional.fbo.render.resize.tex2d_rgba_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.npot_rbo_rgb565_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.npot_rbo_rgb5_a1_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.npot_rbo_rgba4_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.npot_tex2d_rgb_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.npot_tex2d_rgba_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.rbo_rgb565_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.rbo_rgb5_a1_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.rbo_rgba4_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.tex2d_rgb_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.tex2d_rgba_stencil_index8
 ES2-CTS.functional.negative_api.texture.teximage2d_format_mismatch
 ES2-CTS.functional.shaders.operator.exponential.exp2.highp_float_vertex
 ES2-CTS.functional.shaders.operator.exponential.exp2.highp_vec2_vertex
@@ -146,4 +118,32 @@ ES2-CTS.gtf.GL2ExtensionTests.egl_image_external.TestTargetTextureValid = cts b4
 ES2-CTS.gtf.GL2ExtensionTests.egl_image_external.TestSimple = cts b46ed121d6ff2f3fbd933fd7f9d394815c83f3a5
 ES2-CTS.gtf.GL2ExtensionTests.egl_image_external.TestVertexShader = cts b46ed121d6ff2f3fbd933fd7f9d394815c83f3a5
 ESEXT-CTS.tessellation_shader.tessellation_control_to_tessellation_evaluation.gl_tessLevel = cts 072cfb83e20933d23e817b27fffa4c37b34c06d1
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_rbo_rgba4_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.tex2d_rgba_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_rbo_rgba4_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.npot_rbo_rgb565_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_rbo_rgb5_a1_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.tex2d_rgb_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.resize.tex2d_rgb_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.resize.rbo_rgba4_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.rbo_rgb5_a1_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.resize.rbo_rgb5_a1_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_tex2d_rgba_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_tex2d_rgba_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.resize.rbo_rgb565_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_colorbuffer.no_rebind_rbo_rgba4_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_rbo_rgb565_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_tex2d_rgb_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.npot_rbo_rgb5_a1_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_tex2d_rgb_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.rbo_rgb565_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_rbo_rgb5_a1_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.npot_tex2d_rgb_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.npot_tex2d_rgba_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_colorbuffer.no_rebind_rbo_rgb5_a1_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.rbo_rgba4_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.resize.tex2d_rgba_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_colorbuffer.no_rebind_rbo_rgb565_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_rbo_rgb565_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.npot_rbo_rgba4_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
 
