--- a/glescts-test/ilk.conf
+++ b/glescts-test/ilk.conf
@@ -2,34 +2,6 @@
 ES2-CTS.functional.clipping.point.wide_point_clip
 ES2-CTS.functional.fbo.completeness.renderable.texture.depth.rgb_unsigned_int_2_10_10_10_rev
 ES2-CTS.functional.fbo.completeness.renderable.texture.stencil.rgb_unsigned_int_2_10_10_10_rev
-ES2-CTS.functional.fbo.render.recreate_colorbuffer.no_rebind_rbo_rgb565_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_colorbuffer.no_rebind_rbo_rgb5_a1_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_colorbuffer.no_rebind_rbo_rgba4_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_rbo_rgb565_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_rbo_rgb5_a1_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_rbo_rgba4_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_tex2d_rgb_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_tex2d_rgba_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_rbo_rgb565_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_rbo_rgb5_a1_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_rbo_rgba4_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_tex2d_rgb_stencil_index8
-ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_tex2d_rgba_stencil_index8
-ES2-CTS.functional.fbo.render.resize.rbo_rgb565_stencil_index8
-ES2-CTS.functional.fbo.render.resize.rbo_rgb5_a1_stencil_index8
-ES2-CTS.functional.fbo.render.resize.rbo_rgba4_stencil_index8
-ES2-CTS.functional.fbo.render.resize.tex2d_rgb_stencil_index8
-ES2-CTS.functional.fbo.render.resize.tex2d_rgba_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.npot_rbo_rgb565_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.npot_rbo_rgb5_a1_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.npot_rbo_rgba4_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.npot_tex2d_rgb_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.npot_tex2d_rgba_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.rbo_rgb565_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.rbo_rgb5_a1_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.rbo_rgba4_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.tex2d_rgb_stencil_index8
-ES2-CTS.functional.fbo.render.stencil.tex2d_rgba_stencil_index8
 ES2-CTS.functional.negative_api.texture.teximage2d_format_mismatch
 ES2-CTS.gtf.GLCoverage.CoverageGL = cts 2ae873a77485442197b11dda83660652e5eedfac
 
@@ -91,4 +63,32 @@ ES2-CTS.gtf.GL2ExtensionTests.egl_image_external.TestVertexShader = cts b46ed121
 ESEXT-CTS.tessellation_shader.tessellation_control_to_tessellation_evaluation.gl_tessLevel = cts 072cfb83e20933d23e817b27fffa4c37b34c06d1
 ES2-CTS.functional.texture.mipmap.cube.generate.rgba5551_nicest = mesa c4b87f129eb036c9615df3adcc1cebd9df10fc84
 ES2-CTS.functional.texture.mipmap.cube.generate.rgba5551_fastest = mesa c4b87f129eb036c9615df3adcc1cebd9df10fc84
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_rbo_rgba4_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.tex2d_rgba_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_rbo_rgba4_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.npot_rbo_rgb565_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_rbo_rgb5_a1_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.tex2d_rgb_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.resize.tex2d_rgb_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.resize.rbo_rgba4_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.rbo_rgb5_a1_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.resize.rbo_rgb5_a1_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_tex2d_rgba_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_tex2d_rgba_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.resize.rbo_rgb565_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_colorbuffer.no_rebind_rbo_rgba4_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_rbo_rgb565_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_tex2d_rgb_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.npot_rbo_rgb5_a1_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_tex2d_rgb_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.rbo_rgb565_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.no_rebind_rbo_rgb5_a1_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.npot_tex2d_rgb_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.npot_tex2d_rgba_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_colorbuffer.no_rebind_rbo_rgb5_a1_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.rbo_rgba4_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.resize.tex2d_rgba_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_colorbuffer.no_rebind_rbo_rgb565_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.recreate_stencilbuffer.rebind_rbo_rgb565_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+ES2-CTS.functional.fbo.render.stencil.npot_rbo_rgba4_stencil_index8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
 
