--- a/piglit-test/g965.conf
+++ b/piglit-test/g965.conf
@@ -1,5 +1,4 @@
 [expected-failures]
-piglit.hiz.hiz-depth-stencil-test-fbo-d0-s8
 piglit.spec.!opengl 1_1.draw-pixel-with-texture
 piglit.spec.!opengl 1_1.line-aa-width
 piglit.spec.!opengl 1_1.line-flat-clip-color
@@ -12,7 +11,6 @@ piglit.spec.arb_depth_buffer_float.texwrap formats bordercolor
 piglit.spec.arb_depth_buffer_float.texwrap formats bordercolor-swizzled
 piglit.spec.arb_framebuffer_object.fbo-drawbuffers-none use_frag_out
 piglit.spec.arb_get_program_binary.program_binary_retrievable_hint
-piglit.spec.arb_texture_float.fbo-blending-formats
 piglit.spec.egl 1_4.eglcreatesurface
 piglit.spec.egl_khr_create_context.valid debug flag gl
 piglit.spec.egl_khr_create_context.valid debug flag gles1
@@ -404,4 +402,6 @@ piglit.spec.ext_texture_array.fbo-array = mesa a5e1c9f1d5b6063f0a92634967475a053
 piglit.spec.oes_vertex_half_float.draw-vertices-half-float-user_gles2 = piglit 851cd414ef40e6bcadd4f78d40b1f05910ef629c
 piglit.spec.oes_vertex_half_float.draw-vertices-half-float_gles2 = piglit 851cd414ef40e6bcadd4f78d40b1f05910ef629c
 piglit.spec.egl 1_4.egl-invalid-attr = mesa 3ee2be4113d9de7429bfaeaee73c11880fd9d5c9
+piglit.hiz.hiz-depth-stencil-test-fbo-d0-s8 = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
+piglit.spec.arb_texture_float.fbo-blending-formats = mesa 9a9c7e452bc35d0bea1808bcc4caf936a35749cb
 
