add failure status for deqp test regression

--- a/deqp-test/bdwm32.conf
+++ b/deqp-test/bdwm32.conf
@@ -12,6 +12,9 @@ dEQP-GLES31.functional.program_interface_query.program_input.type.separable_geom
 dEQP-GLES31.functional.program_interface_query.program_input.type.separable_geometry.uint = initial deqp egl fail
 dEQP-GLES31.functional.program_interface_query.program_input.type.separable_geometry.uvec3 = initial deqp egl fail
 dEQP-GLES31.functional.program_interface_query.program_input.type.separable_geometry.ivec3 = initial deqp egl fail
+dEQP-GLES31.functional.debug.negative_coverage.get_error.vertex_array.draw_elements_base_vertex_invalid_map = deqp 6e213b6fdc87dd5f5decf85f240fadd392fa64c6
+dEQP-GLES31.functional.debug.negative_coverage.get_error.vertex_array.draw_elements_instanced_base_vertex_invalid_map = deqp 6e213b6fdc87dd5f5decf85f240fadd392fa64c6
+dEQP-GLES31.functional.debug.negative_coverage.get_error.vertex_array.draw_range_elements_base_vertex_invalid_map = deqp 6e213b6fdc87dd5f5decf85f240fadd392fa64c6
 
 [fixed-tests]
 dEQP-GLES3.functional.shaders.matrix.div_assign.lowp_mat2x3_float_vertex = mesa 73d0e7f
