--- a/deqp-test/ivb.conf
+++ b/deqp-test/ivb.conf
@@ -35,6 +35,9 @@ dEQP-GLES31.functional.debug.negative_coverage.get_error.vertex_array.draw_eleme
 dEQP-GLES31.functional.debug.negative_coverage.callbacks.vertex_array.draw_elements_base_vertex_primitive_mode_mismatch = deqp f5e7ab6b79b2b0ec1b87d5f28997c44223e46766
 dEQP-GLES31.functional.debug.negative_coverage.log.vertex_array.draw_elements_base_vertex_primitive_mode_mismatch = deqp f5e7ab6b79b2b0ec1b87d5f28997c44223e46766
 dEQP-GLES31.functional.debug.negative_coverage.callbacks.vertex_array.draw_range_elements_base_vertex_primitive_mode_mismatch = deqp f5e7ab6b79b2b0ec1b87d5f28997c44223e46766
+dEQP-GLES31.functional.debug.negative_coverage.get_error.vertex_array.draw_elements_base_vertex_invalid_map = deqp 6e213b6fdc87dd5f5decf85f240fadd392fa64c6
+dEQP-GLES31.functional.debug.negative_coverage.get_error.vertex_array.draw_elements_instanced_base_vertex_invalid_map = deqp 6e213b6fdc87dd5f5decf85f240fadd392fa64c6
+dEQP-GLES31.functional.debug.negative_coverage.get_error.vertex_array.draw_range_elements_base_vertex_invalid_map = deqp 6e213b6fdc87dd5f5decf85f240fadd392fa64c6
 
 [expected-crashes]
 dEQP-GLES31.functional.debug.negative_coverage.callbacks.compute.invalid_maximum_work_group_sizes = deqp f5e7ab6b79b2b0ec1b87d5f28997c44223e46766
