add glescts component

--- a/glescts-test/cfl.conf
+++ b/glescts-test/cfl.conf
@@ -1,9 +1,13 @@
 [expected-failures]
-ESEXT-CTS.draw_elements_base_vertex_tests.invalid_mapped_bos = mesa 9cd60fce9c22737000a8f8dc711141f8a523fe75
+KHR-GLESEXT.draw_elements_base_vertex_tests.invalid_mapped_bos = mesa 9cd60fce9c22737000a8f8dc711141f8a523fe75
+dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_vertex = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
+dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_fragment = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
+dEQP-GLES3.functional.shaders.preprocessor.builtin.line_and_file_expression_fragment = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
+dEQP-GLES3.functional.shaders.preprocessor.builtin.line_and_file_expression_vertex = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
 
 [expected-crashes]
-ES31-CTS.core.texture_storage_multisample.APIGLSampleMaski = mesa 9cd60fce9c22737000a8f8dc711141f8a523fe75
-ES32-CTS.gtf = mesa 9cd60fce9c22737000a8f8dc711141f8a523fe75
+KHR-GLES31.core.texture_storage_multisample.APIGLSampleMaski = mesa 9cd60fce9c22737000a8f8dc711141f8a523fe75
+KHR-GLES32.gtf = mesa 9cd60fce9c22737000a8f8dc711141f8a523fe75
 
 [fixed-tests]
 
