--- a/glescts-test/bxt.conf
+++ b/glescts-test/bxt.conf
@@ -1,51 +1,102 @@
 [expected-failures]
-ESEXT-CTS.draw_elements_base_vertex_tests.invalid_mapped_bos = mesa e401cfa28a6e32d7081f9de998e731965ce966fb
+dEQP-GLES3.functional.shaders.preprocessor.builtin.line_and_file_expression_vertex = deqp d7048eb3613becbc477096e8cdcf66f0e41155dc
+dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_vertex = deqp d7048eb3613becbc477096e8cdcf66f0e41155dc
+dEQP-GLES3.functional.shaders.preprocessor.builtin.line_and_file_expression_fragment = deqp d7048eb3613becbc477096e8cdcf66f0e41155dc
+dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_fragment = deqp d7048eb3613becbc477096e8cdcf66f0e41155dc
+KHR-GLESEXT.draw_elements_base_vertex_tests.invalid_mapped_bos = mesa e401cfa28a6e32d7081f9de998e731965ce966fb
 
 [expected-crashes]
-ES32-CTS.gtf
-ES31-CTS.core.texture_storage_multisample.APIGLSampleMaski
+KHR-GLES32.gtf
+KHR-GLES31.core.texture_storage_multisample.APIGLSampleMaski
 
 [fixed-tests]
-ES3-CTS.functional.texture.mipmap.cube.generate.rgba5551_nicest = mesa c4b87f129eb036c9615df3adcc1cebd9df10fc84
-ES2-CTS.functional.texture.mipmap.cube.generate.rgba5551_nicest = mesa c4b87f129eb036c9615df3adcc1cebd9df10fc84
-ES2-CTS.functional.texture.mipmap.cube.generate.rgba5551_fastest = mesa c4b87f129eb036c9615df3adcc1cebd9df10fc84
-ES3-CTS.functional.texture.mipmap.cube.generate.rgba5551_fastest = mesa c4b87f129eb036c9615df3adcc1cebd9df10fc84
-ES31-CTS.functional.compute.shared_var.atomic.or.mediump_uint = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.atomic.compswap.highp_uint = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.basic_type.mat3x2_highp = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.atomic.compswap.mediump_int = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.basic_type.mat4_mediump = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.work_group_size.mat4_1_1_1 = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.work_group_size.mat4_1_128_1 = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.basic_type.mat4x2_mediump = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.atomic.and.highp_int = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.atomic.compswap.highp_int = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.basic_type.uvec4_mediump = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.atomic.xor.highp_int = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.basic_type.uvec3_lowp = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.atomic.add.mediump_uint = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.atomic.compswap.lowp_int = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.basic_type.mat3_mediump = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.basic_type.uint_highp = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.basic_type.uvec4_highp = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.basic_type.mat3_highp = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.basic_type.mat4_highp = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.atomic.add.highp_uint = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.basic_type.uvec3_mediump = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.atomic.min.highp_int = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES31-CTS.functional.compute.shared_var.basic_type.mat3x4_highp = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
-ES2-CTS.functional.state_query.integers.viewport_getfloat = mesa af45b8159cf5b9c15000e4221af6dc4cb85bd05e
-ES3-CTS.functional.state_query.integers.viewport_getinteger = mesa af45b8159cf5b9c15000e4221af6dc4cb85bd05e
-ES3-CTS.functional.state_query.integers.viewport_getfloat = mesa af45b8159cf5b9c15000e4221af6dc4cb85bd05e
-ES3-CTS.functional.state_query.integers.viewport_getinteger64 = mesa af45b8159cf5b9c15000e4221af6dc4cb85bd05e
-ES2-CTS.functional.state_query.integers.viewport_getinteger = mesa af45b8159cf5b9c15000e4221af6dc4cb85bd05e
-ES31-CTS.functional.state_query.indexed.atomic_counter_buffer_size_getintegeri_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
-ES32-CTS.functional.state_query.indexed.atomic_counter_buffer_size_getinteger64i_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
-ES31-CTS.functional.state_query.indexed.atomic_counter_buffer_start_getbooleani_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
-ES31-CTS.core.shader_atomic_counters.basic-buffer-bind = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
-ES32-CTS.functional.state_query.indexed.atomic_counter_buffer_size_getbooleani_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
-ES31-CTS.functional.state_query.indexed.atomic_counter_buffer_size_getinteger64i_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
-ES31-CTS.functional.state_query.indexed.atomic_counter_buffer_size_getbooleani_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
-ES31-CTS.functional.state_query.indexed.atomic_counter_buffer_start_getintegeri_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
-ES31-CTS.functional.state_query.indexed.atomic_counter_buffer_start_getinteger64i_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
+dEQP-EGL.functional.image.render_multiple_contexts.gles2_renderbuffer_depth16_depth_buffer = mesa 42011be1e27f59d750b781c10766e19ec0ee6ff5
+dEQP-EGL.functional.negative_api.create_pixmap_surface = mesa 5e97b8f5ce975dfb66cc46e6b4cc1e89eb8c1dc0
+dEQP-EGL.functional.negative_api.create_window_surface = mesa 5e97b8f5ce975dfb66cc46e6b4cc1e89eb8c1dc0
+dEQP-EGL.functional.resize.surface_size.grow = deqp ed51fdbbcd6b5c384b3d654e39b71a2b1da7169e
+dEQP-EGL.functional.resize.surface_size.stretch_width = deqp ed51fdbbcd6b5c384b3d654e39b71a2b1da7169e
+dEQP-EGL.functional.resize.surface_size.shrink = deqp ed51fdbbcd6b5c384b3d654e39b71a2b1da7169e
+dEQP-EGL.functional.resize.surface_size.stretch_height = deqp ed51fdbbcd6b5c384b3d654e39b71a2b1da7169e
+dEQP-GLES3.functional.state_query.integers.stencil_back_value_mask_separate_getfloat = mesa 37d63b50b196afe61b4d7c33b1118a49a5e1e13f
+dEQP-GLES3.functional.state_query.integers.stencil_value_mask_separate_getfloat = mesa 37d63b50b196afe61b4d7c33b1118a49a5e1e13f
+dEQP-GLES3.functional.state_query.integers.stencil_value_mask_getfloat = mesa 37d63b50b196afe61b4d7c33b1118a49a5e1e13f
+dEQP-GLES3.functional.state_query.integers.stencil_back_value_mask_getfloat = mesa 37d63b50b196afe61b4d7c33b1118a49a5e1e13f
+dEQP-GLES3.functional.state_query.integers.stencil_value_mask_separate_both_getfloat = mesa 37d63b50b196afe61b4d7c33b1118a49a5e1e13f
+dEQP-GLES3.functional.state_query.integers.stencil_back_value_mask_separate_both_getfloat = mesa 37d63b50b196afe61b4d7c33b1118a49a5e1e13f
+dEQP-EGL.functional.create_context.no_config = mesa 5e2909e732aaccfa2e26745dd6f32e9dc266dd5d
+dEQP-GLES3.functional.negative_api.texture.teximage3d = deqp 9e51a9547aab40792af8ac344552cd76786607ba
+dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_context.gles1_gles2.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_context.gles1.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2_gles3.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_context.gles1_gles2_gles3.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.single_context.gles1.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_thread.gles1.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_context.gles1.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_thread.gles1.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_context.gles1_gles2.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_context.gles1.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_context.gles1_gles2.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_thread.gles1.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2_gles3.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2_gles3.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_context.gles1_gles2_gles3.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2_gles3.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.single_context.gles1.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.single_context.gles1.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_thread.gles1.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_context.gles1.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_context.gles1_gles2_gles3.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_context.gles1_gles2_gles3.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.single_context.gles1.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.color_clears.multi_context.gles1_gles2.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
+dEQP-EGL.functional.wide_color.window_8888_colorspace_srgb = deqp 2a3edba962ff9efe07a759bfdc763e50d5400ecc
+dEQP-EGL.functional.wide_color.pbuffer_8888_colorspace_srgb = deqp 2a3edba962ff9efe07a759bfdc763e50d5400ecc
+dEQP-EGL.functional.wide_color.window_8888_colorspace_default = deqp b446f2dd213eb697e8a968ba13873a15958e0352
+dEQP-EGL.functional.wide_color.pbuffer_8888_colorspace_default = deqp b446f2dd213eb697e8a968ba13873a15958e0352
+KHR-GLES3.functional.texture.mipmap.cube.generate.rgba5551_nicest = mesa c4b87f129eb036c9615df3adcc1cebd9df10fc84
+KHR-GLES2.functional.texture.mipmap.cube.generate.rgba5551_nicest = mesa c4b87f129eb036c9615df3adcc1cebd9df10fc84
+KHR-GLES2.functional.texture.mipmap.cube.generate.rgba5551_fastest = mesa c4b87f129eb036c9615df3adcc1cebd9df10fc84
+KHR-GLES3.functional.texture.mipmap.cube.generate.rgba5551_fastest = mesa c4b87f129eb036c9615df3adcc1cebd9df10fc84
+KHR-GLES31.functional.compute.shared_var.atomic.or.mediump_uint = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.atomic.compswap.highp_uint = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.basic_type.mat3x2_highp = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.atomic.compswap.mediump_int = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.basic_type.mat4_mediump = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.work_group_size.mat4_1_1_1 = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.work_group_size.mat4_1_128_1 = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.basic_type.mat4x2_mediump = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.atomic.and.highp_int = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.atomic.compswap.highp_int = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.basic_type.uvec4_mediump = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.atomic.xor.highp_int = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.basic_type.uvec3_lowp = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.atomic.add.mediump_uint = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.atomic.compswap.lowp_int = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.basic_type.mat3_mediump = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.basic_type.uint_highp = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.basic_type.uvec4_highp = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.basic_type.mat3_highp = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.basic_type.mat4_highp = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.atomic.add.highp_uint = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.basic_type.uvec3_mediump = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.atomic.min.highp_int = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES31.functional.compute.shared_var.basic_type.mat3x4_highp = mesa 8d02916e0c083f57bc7dfd886333f099763bd998
+KHR-GLES2.functional.state_query.integers.viewport_getfloat = mesa af45b8159cf5b9c15000e4221af6dc4cb85bd05e
+KHR-GLES3.functional.state_query.integers.viewport_getinteger = mesa af45b8159cf5b9c15000e4221af6dc4cb85bd05e
+KHR-GLES3.functional.state_query.integers.viewport_getfloat = mesa af45b8159cf5b9c15000e4221af6dc4cb85bd05e
+KHR-GLES3.functional.state_query.integers.viewport_getinteger64 = mesa af45b8159cf5b9c15000e4221af6dc4cb85bd05e
+KHR-GLES2.functional.state_query.integers.viewport_getinteger = mesa af45b8159cf5b9c15000e4221af6dc4cb85bd05e
+KHR-GLES31.functional.state_query.indexed.atomic_counter_buffer_size_getintegeri_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
+KHR-GLES32.functional.state_query.indexed.atomic_counter_buffer_size_getinteger64i_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
+KHR-GLES31.functional.state_query.indexed.atomic_counter_buffer_start_getbooleani_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
+KHR-GLES31.core.shader_atomic_counters.basic-buffer-bind = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
+KHR-GLES32.functional.state_query.indexed.atomic_counter_buffer_size_getbooleani_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
+KHR-GLES31.functional.state_query.indexed.atomic_counter_buffer_size_getinteger64i_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
+KHR-GLES31.functional.state_query.indexed.atomic_counter_buffer_size_getbooleani_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
+KHR-GLES31.functional.state_query.indexed.atomic_counter_buffer_start_getintegeri_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
+KHR-GLES31.functional.state_query.indexed.atomic_counter_buffer_start_getinteger64i_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
 
