Separate dEQP and glescts suites
Previously, dEQP only ran tests which were not in the cts.  Now that
we have an updated CTS, it makes more sense to run most tests in dEQP,
and drop dEQP tests from the CTS runs.

This requires us to move most test status from CTS to dEQP.

--- a/deqp-test/hsw.conf
+++ b/deqp-test/hsw.conf
@@ -1,4 +1,6 @@
 [expected-failures]
+dEQP-GLES31.functional.texture.border_clamp.formats.rgba32ui.nearest_size_npot
+dEQP-GLES31.functional.texture.border_clamp.formats.rgba32ui.nearest_size_pot
 dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_fragment = deqp 55988830cd949f25d47ed6aefdfdaef655ab2080
 dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_vertex = deqp 55988830cd949f25d47ed6aefdfdaef655ab2080
 dEQP-GLES3.functional.shaders.preprocessor.builtin.line_and_file_expression_fragment = deqp 55988830cd949f25d47ed6aefdfdaef655ab2080
@@ -6,6 +8,8 @@ dEQP-GLES3.functional.shaders.preprocessor.builtin.line_and_file_expression_vert
 dEQP-GLES31.functional.debug.negative_coverage.get_error.vertex_array.draw_range_elements_base_vertex_invalid_map = deqp 03c395c60f49e670e904368dbe226cdc60284ebe
 dEQP-GLES31.functional.debug.negative_coverage.get_error.vertex_array.draw_elements_base_vertex_invalid_map = deqp 03c395c60f49e670e904368dbe226cdc60284ebe
 dEQP-GLES31.functional.debug.negative_coverage.get_error.vertex_array.draw_elements_instanced_base_vertex_invalid_map = deqp 03c395c60f49e670e904368dbe226cdc60284ebe
+
+
 
 [expected-crashes]
 
