--- a/deqp-test/snb.conf
+++ b/deqp-test/snb.conf
@@ -1,8 +1,23 @@
 [expected-failures]
+dEQP-GLES3.functional.fbo.msaa.4_samples.rgba32f = mesa f5859b45b1686e8116380d870f48432495fb19c7
 dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_fragment = deqp 55988830cd949f25d47ed6aefdfdaef655ab2080
 dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_vertex = deqp 55988830cd949f25d47ed6aefdfdaef655ab2080
 dEQP-GLES3.functional.shaders.preprocessor.builtin.line_and_file_expression_fragment = deqp 55988830cd949f25d47ed6aefdfdaef655ab2080
 dEQP-GLES3.functional.shaders.preprocessor.builtin.line_and_file_expression_vertex = deqp 55988830cd949f25d47ed6aefdfdaef655ab2080
+dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_fragment.scalar
+dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_fragment.vec2
+dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_fragment.vec3
+dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_fragment.vec4
+dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_vertex.scalar
+dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_vertex.vec2
+dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_vertex.vec3
+dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_vertex.vec4
+dEQP-GLES3.functional.shaders.precision.uint.lowp_mul_fragment = mesa 18fde36ced4279f2577097a1a7d31b55f2f5f141
+dEQP-GLES3.functional.shaders.precision.int.highp_mul_fragment = mesa 18fde36ced4279f2577097a1a7d31b55f2f5f141
+dEQP-GLES3.functional.shaders.precision.int.mediump_mul_fragment = mesa 18fde36ced4279f2577097a1a7d31b55f2f5f141
+dEQP-GLES3.functional.shaders.precision.uint.highp_mul_fragment = mesa 18fde36ced4279f2577097a1a7d31b55f2f5f141
+dEQP-GLES3.functional.shaders.precision.int.lowp_mul_fragment = mesa 18fde36ced4279f2577097a1a7d31b55f2f5f141
+dEQP-GLES3.functional.shaders.precision.uint.mediump_mul_fragment = mesa 18fde36ced4279f2577097a1a7d31b55f2f5f141
 
 [expected-crashes]
 
