--- a/glescts-test/bxt.conf
+++ b/glescts-test/bxt.conf
@@ -1,62 +1,15 @@
 [expected-failures]
-dEQP-GLES3.functional.shaders.preprocessor.builtin.line_and_file_expression_vertex = deqp d7048eb3613becbc477096e8cdcf66f0e41155dc
-dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_vertex = deqp d7048eb3613becbc477096e8cdcf66f0e41155dc
-dEQP-GLES3.functional.shaders.preprocessor.builtin.line_and_file_expression_fragment = deqp d7048eb3613becbc477096e8cdcf66f0e41155dc
-dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_fragment = deqp d7048eb3613becbc477096e8cdcf66f0e41155dc
 KHR-GLESEXT.draw_elements_base_vertex_tests.invalid_mapped_bos = mesa e401cfa28a6e32d7081f9de998e731965ce966fb
 
 [expected-crashes]
 KHR-GLES32.gtf
 KHR-GLES31.core.texture_storage_multisample.APIGLSampleMaski
+KHR-GLES3.shaders.preprocessor.extensions.invalid_char_in_behavior_fragment = cts 39b5f6417163fa449c6a925bc1d14d32a2e19f13
+KHR-GLES3.shaders.preprocessor.extensions.invalid_char_in_behavior_vertex = cts 39b5f6417163fa449c6a925bc1d14d32a2e19f13
+KHR-GLES3.shaders.preprocessor.extensions.invalid_char_in_name_fragment = cts 39b5f6417163fa449c6a925bc1d14d32a2e19f13
+KHR-GLES3.shaders.preprocessor.extensions.invalid_char_in_name_vertex = cts 39b5f6417163fa449c6a925bc1d14d32a2e19f13
 
 [fixed-tests]
-dEQP-EGL.functional.image.render_multiple_contexts.gles2_renderbuffer_depth16_depth_buffer = mesa 42011be1e27f59d750b781c10766e19ec0ee6ff5
-dEQP-EGL.functional.negative_api.create_pixmap_surface = mesa 5e97b8f5ce975dfb66cc46e6b4cc1e89eb8c1dc0
-dEQP-EGL.functional.negative_api.create_window_surface = mesa 5e97b8f5ce975dfb66cc46e6b4cc1e89eb8c1dc0
-dEQP-EGL.functional.resize.surface_size.grow = deqp ed51fdbbcd6b5c384b3d654e39b71a2b1da7169e
-dEQP-EGL.functional.resize.surface_size.stretch_width = deqp ed51fdbbcd6b5c384b3d654e39b71a2b1da7169e
-dEQP-EGL.functional.resize.surface_size.shrink = deqp ed51fdbbcd6b5c384b3d654e39b71a2b1da7169e
-dEQP-EGL.functional.resize.surface_size.stretch_height = deqp ed51fdbbcd6b5c384b3d654e39b71a2b1da7169e
-dEQP-GLES3.functional.state_query.integers.stencil_back_value_mask_separate_getfloat = mesa 37d63b50b196afe61b4d7c33b1118a49a5e1e13f
-dEQP-GLES3.functional.state_query.integers.stencil_value_mask_separate_getfloat = mesa 37d63b50b196afe61b4d7c33b1118a49a5e1e13f
-dEQP-GLES3.functional.state_query.integers.stencil_value_mask_getfloat = mesa 37d63b50b196afe61b4d7c33b1118a49a5e1e13f
-dEQP-GLES3.functional.state_query.integers.stencil_back_value_mask_getfloat = mesa 37d63b50b196afe61b4d7c33b1118a49a5e1e13f
-dEQP-GLES3.functional.state_query.integers.stencil_value_mask_separate_both_getfloat = mesa 37d63b50b196afe61b4d7c33b1118a49a5e1e13f
-dEQP-GLES3.functional.state_query.integers.stencil_back_value_mask_separate_both_getfloat = mesa 37d63b50b196afe61b4d7c33b1118a49a5e1e13f
-dEQP-EGL.functional.create_context.no_config = mesa 5e2909e732aaccfa2e26745dd6f32e9dc266dd5d
-dEQP-GLES3.functional.negative_api.texture.teximage3d = deqp 9e51a9547aab40792af8ac344552cd76786607ba
-dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1_gles2.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2_gles3.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1_gles2_gles3.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.single_context.gles1.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1_gles2.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1_gles2.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2_gles3.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2_gles3.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1_gles2_gles3.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2_gles3.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.single_context.gles1.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.single_context.gles1.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1_gles2_gles3.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1_gles2_gles3.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.single_context.gles1.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1_gles2.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.wide_color.window_8888_colorspace_srgb = deqp 2a3edba962ff9efe07a759bfdc763e50d5400ecc
-dEQP-EGL.functional.wide_color.pbuffer_8888_colorspace_srgb = deqp 2a3edba962ff9efe07a759bfdc763e50d5400ecc
-dEQP-EGL.functional.wide_color.window_8888_colorspace_default = deqp b446f2dd213eb697e8a968ba13873a15958e0352
-dEQP-EGL.functional.wide_color.pbuffer_8888_colorspace_default = deqp b446f2dd213eb697e8a968ba13873a15958e0352
 KHR-GLES3.functional.texture.mipmap.cube.generate.rgba5551_nicest = mesa c4b87f129eb036c9615df3adcc1cebd9df10fc84
 KHR-GLES2.functional.texture.mipmap.cube.generate.rgba5551_nicest = mesa c4b87f129eb036c9615df3adcc1cebd9df10fc84
 KHR-GLES2.functional.texture.mipmap.cube.generate.rgba5551_fastest = mesa c4b87f129eb036c9615df3adcc1cebd9df10fc84
@@ -99,4 +52,5 @@ KHR-GLES31.functional.state_query.indexed.atomic_counter_buffer_size_getinteger6
 KHR-GLES31.functional.state_query.indexed.atomic_counter_buffer_size_getbooleani_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
 KHR-GLES31.functional.state_query.indexed.atomic_counter_buffer_start_getintegeri_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
 KHR-GLES31.functional.state_query.indexed.atomic_counter_buffer_start_getinteger64i_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
+KHR-GLES32.core.texture_cube_map_array.etc2_texture = cts ff5e186db7df4d2f28017062d50ed894e7cc37fd
 
