--- a/glescts-test/g965.conf
+++ b/glescts-test/g965.conf
@@ -24,8 +24,13 @@ KHR-GLES2.functional.shaders.random.exponential.vertex.6
 KHR-GLES2.functional.shaders.random.exponential.vertex.89
 KHR-GLES2.gtf.GLCoverage.CoverageGL = cts 2ae873a77485442197b11dda83660652e5eedfac
 KHR-GLES2.gtf.GL2ExtensionTests.texture_float.texture_float = mesa c16a7443e9999a80bc1e87134297f96f1216d702
+KHR-GLES32.core.texture_cube_map_array.etc2_texture = cts 39b5f6417163fa449c6a925bc1d14d32a2e19f13
 
 [expected-crashes]
+KHR-GLES3.shaders.preprocessor.extensions.invalid_char_in_behavior_fragment = cts 39b5f6417163fa449c6a925bc1d14d32a2e19f13
+KHR-GLES3.shaders.preprocessor.extensions.invalid_char_in_behavior_vertex = cts 39b5f6417163fa449c6a925bc1d14d32a2e19f13
+KHR-GLES3.shaders.preprocessor.extensions.invalid_char_in_name_fragment = cts 39b5f6417163fa449c6a925bc1d14d32a2e19f13
+KHR-GLES3.shaders.preprocessor.extensions.invalid_char_in_name_vertex = cts 39b5f6417163fa449c6a925bc1d14d32a2e19f13
 
 [fixed-tests]
 KHR-GLES2.functional.negative_api.texture.generatemipmap_invalid_target = mesa af8ad495415e9d71fd6255114d4ea5e0ab6a1e2a post-11.2
