--- a/glescts-test/cfl.conf
+++ b/glescts-test/cfl.conf
@@ -1,13 +1,14 @@
 [expected-failures]
 KHR-GLESEXT.draw_elements_base_vertex_tests.invalid_mapped_bos = mesa 9cd60fce9c22737000a8f8dc711141f8a523fe75
-dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_vertex = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
-dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_fragment = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
-dEQP-GLES3.functional.shaders.preprocessor.builtin.line_and_file_expression_fragment = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
-dEQP-GLES3.functional.shaders.preprocessor.builtin.line_and_file_expression_vertex = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
 
 [expected-crashes]
 KHR-GLES31.core.texture_storage_multisample.APIGLSampleMaski = mesa 9cd60fce9c22737000a8f8dc711141f8a523fe75
 KHR-GLES32.gtf = mesa 9cd60fce9c22737000a8f8dc711141f8a523fe75
+KHR-GLES3.shaders.preprocessor.extensions.invalid_char_in_behavior_fragment = cts 39b5f6417163fa449c6a925bc1d14d32a2e19f13
+KHR-GLES3.shaders.preprocessor.extensions.invalid_char_in_behavior_vertex = cts 39b5f6417163fa449c6a925bc1d14d32a2e19f13
+KHR-GLES3.shaders.preprocessor.extensions.invalid_char_in_name_fragment = cts 39b5f6417163fa449c6a925bc1d14d32a2e19f13
+KHR-GLES3.shaders.preprocessor.extensions.invalid_char_in_name_vertex = cts 39b5f6417163fa449c6a925bc1d14d32a2e19f13
 
 [fixed-tests]
+KHR-GLES32.core.texture_cube_map_array.etc2_texture = cts ff5e186db7df4d2f28017062d50ed894e7cc37fd
 
