--- a/glescts-test/glk.conf
+++ b/glescts-test/glk.conf
@@ -1,47 +1,15 @@
 [expected-failures]
-dEQP-GLES3.functional.shaders.preprocessor.builtin.line_and_file_expression_fragment = initial_fail
-dEQP-GLES3.functional.shaders.preprocessor.builtin.line_and_file_expression_vertex = initial_fail
-dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_fragment = initial_fail
-dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_vertex = initial_fail
 KHR-GLESEXT.draw_elements_base_vertex_tests.invalid_mapped_bos = mesa e401cfa28a6e32d7081f9de998e731965ce966fb
 
 [expected-crashes]
 KHR-GLES31.core.texture_storage_multisample.APIGLSampleMaski = initial_fail
 KHR-GLES32.gtf = initial_fail
+KHR-GLES3.shaders.preprocessor.extensions.invalid_char_in_behavior_fragment = cts 39b5f6417163fa449c6a925bc1d14d32a2e19f13
+KHR-GLES3.shaders.preprocessor.extensions.invalid_char_in_behavior_vertex = cts 39b5f6417163fa449c6a925bc1d14d32a2e19f13
+KHR-GLES3.shaders.preprocessor.extensions.invalid_char_in_name_fragment = cts 39b5f6417163fa449c6a925bc1d14d32a2e19f13
+KHR-GLES3.shaders.preprocessor.extensions.invalid_char_in_name_vertex = cts 39b5f6417163fa449c6a925bc1d14d32a2e19f13
 
 [fixed-tests]
-dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1_gles2.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2_gles3.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1_gles2_gles3.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.single_context.gles1.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1_gles2.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1_gles2.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2_gles3.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2_gles3.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1_gles2_gles3.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2_gles3.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.single_context.gles1.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.single_context.gles1.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_thread.gles1_gles2.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1.rgba8888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1_gles2_gles3.rgb888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1_gles2_gles3.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.single_context.gles1.rgb888_pbuffer = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.color_clears.multi_context.gles1_gles2.rgba8888_window = deqp 89c3844ccba5e68094059cb12b63d561eb9fb062
-dEQP-EGL.functional.wide_color.window_8888_colorspace_srgb = deqp 2a3edba962ff9efe07a759bfdc763e50d5400ecc
-dEQP-EGL.functional.wide_color.pbuffer_8888_colorspace_srgb = deqp 2a3edba962ff9efe07a759bfdc763e50d5400ecc
-dEQP-EGL.functional.wide_color.window_8888_colorspace_default = deqp b446f2dd213eb697e8a968ba13873a15958e0352
-dEQP-EGL.functional.wide_color.pbuffer_8888_colorspace_default = deqp b446f2dd213eb697e8a968ba13873a15958e0352
 KHR-GLES2.functional.state_query.integers.viewport_getfloat = mesa af45b8159cf5b9c15000e4221af6dc4cb85bd05e
 KHR-GLES3.functional.state_query.integers.viewport_getinteger = mesa af45b8159cf5b9c15000e4221af6dc4cb85bd05e
 KHR-GLES3.functional.state_query.integers.viewport_getfloat = mesa af45b8159cf5b9c15000e4221af6dc4cb85bd05e
@@ -56,4 +24,5 @@ KHR-GLES31.functional.state_query.indexed.atomic_counter_buffer_size_getinteger6
 KHR-GLES31.functional.state_query.indexed.atomic_counter_buffer_size_getbooleani_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
 KHR-GLES31.functional.state_query.indexed.atomic_counter_buffer_start_getintegeri_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
 KHR-GLES31.functional.state_query.indexed.atomic_counter_buffer_start_getinteger64i_v = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
+KHR-GLES32.core.texture_cube_map_array.etc2_texture = cts ff5e186db7df4d2f28017062d50ed894e7cc37fd
 
