--- a/piglit-test/hswm32.conf
+++ b/piglit-test/hswm32.conf
@@ -657,4 +657,6 @@ piglit.spec.arb_sample_shading.samplemask 6 all = piglit d9d5dd788094d90ca4b927b
 piglit.spec.arb_separate_shader_objects.execution.layout-location-named-block = mesa 13652e7516a3ef75c5ae75ffa5c7f048629bf772
 piglit.spec.arb_query_buffer_object.coherency = mesa 048d4c45c94eb8d99f2a53f3bf200b2c6a9f9629
 piglit.spec.arb_texture_buffer_range.ranges-2 compat = piglit c85e63199e81bac38ccee060883e64f107f571e3
+piglit.spec.arb_indirect_parameters.tf-count-elements = mesa 048d4c45c94eb8d99f2a53f3bf200b2c6a9f9629
+piglit.spec.arb_indirect_parameters.tf-count-arrays = mesa 048d4c45c94eb8d99f2a53f3bf200b2c6a9f9629
 
