--- a/glcts-test/bdw.conf
+++ b/glcts-test/bdw.conf
@@ -31,5 +31,5 @@ KHR-GL46.transform_feedback.api_errors_test = glcts d6144a989937b2829a9fc9813de9
 KHR-GL46.shader_ballot_tests.ShaderBallotBitmasks = mesa b697ece10aa041b8653eb184d73dcf5b846729a3
 KHR-GL46.enhanced_layouts.xfb_stride_of_empty_list = mesa 9c53b80ff94c60bef18af6fbeee30bae43b42485
 KHR-GL46.enhanced_layouts.xfb_stride_of_empty_list_and_api = mesa 9c53b80ff94c60bef18af6fbeee30bae43b42485
-KHR-GL46.enhanced_layouts.varying_structure_locations = glcts 6b74eba7938e151aea6f54d25f7410ed7161ab82
+KHR-GL46.enhanced_layouts.varying_structure_locations = glcts 6b74eba7938e151aea6f54d25f7410ed7161ab82 mesa d5a641106baae2122cc3f09b4a755077d902ee88
 
