--- a/deqp-test/byt.conf
+++ b/deqp-test/byt.conf
@@ -43,8 +43,6 @@ dEQP-GLES31.functional.texture.border_clamp.formats.rgba16i.nearest_size_npot
 dEQP-GLES31.functional.texture.border_clamp.formats.rgba16i.nearest_size_pot
 dEQP-GLES31.functional.texture.border_clamp.formats.rgba16ui.nearest_size_npot
 dEQP-GLES31.functional.texture.border_clamp.formats.rgba16ui.nearest_size_pot
-dEQP-GLES31.functional.texture.border_clamp.formats.rgba32i.nearest_size_npot
-dEQP-GLES31.functional.texture.border_clamp.formats.rgba32i.nearest_size_pot
 dEQP-GLES31.functional.texture.border_clamp.formats.rgba32ui.nearest_size_npot
 dEQP-GLES31.functional.texture.border_clamp.formats.rgba32ui.nearest_size_pot
 dEQP-GLES31.functional.texture.border_clamp.formats.rgba8i.nearest_size_npot
@@ -4972,4 +4970,6 @@ dEQP-EGL.functional.wide_color.pbuffer_8888_colorspace_srgb = deqp 2a3edba962ff9
 dEQP-EGL.functional.wide_color.window_8888_colorspace_default = deqp b446f2dd213eb697e8a968ba13873a15958e0352
 dEQP-EGL.functional.wide_color.pbuffer_8888_colorspace_default = deqp b446f2dd213eb697e8a968ba13873a15958e0352
 dEQP-GLES31.functional.srgb_texture_decode.skip_decode.srgba8.texel_fetch = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
+dEQP-GLES31.functional.texture.border_clamp.formats.rgba32i.nearest_size_npot = deqp a8bd356e5802e8ca33bd847e7f403d8d9c1e7ed4
+dEQP-GLES31.functional.texture.border_clamp.formats.rgba32i.nearest_size_pot = deqp a8bd356e5802e8ca33bd847e7f403d8d9c1e7ed4
 
