gl46: re-validate results for all tests
Igalia reported that many tests pass or are no longer flaky.  This
commit represents a full verification of test status with no skips or
prior status.

--- a/glcts-test/bdw.conf
+++ b/glcts-test/bdw.conf
@@ -1,20 +1,14 @@
 [expected-failures]
-KHR-GL46.shader_draw_parameters_tests.ShaderDrawArraysParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shader_draw_parameters_tests.ShaderMultiDrawArraysIndirectParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.gl_spirv.spirv_modules_shader_binary_multiple_shader_objects_test = glcts 070595c4dff00b78cde0d5c9dd3cfbc96554b6bc
 KHR-GL46.shader_draw_parameters_tests.MultiDrawArraysIndirectCountParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.shader_draw_parameters_tests.ShaderDrawArraysInstancedParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.shader_draw_parameters_tests.ShaderDrawArraysParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.shader_draw_parameters_tests.ShaderMultiDrawArraysIndirectParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.shader_draw_parameters_tests.ShaderMultiDrawArraysParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.spirv_extensions.spirv_extensions_queries = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.gl_spirv.spirv_modules_shader_binary_multiple_shader_objects_test = glcts 070595c4dff00b78cde0d5c9dd3cfbc96554b6bc
 
 [expected-crashes]
-KHR-GL46.shaders.preprocessor.extensions.invalid_char_in_behavior_fragment = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shaders.preprocessor.extensions.invalid_char_in_name_fragment = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shader_subroutine.multiple_contexts = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shaders.preprocessor.extensions.invalid_char_in_behavior_vertex = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shading_language_420pack.utf8_characters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shaders.preprocessor.extensions.invalid_char_in_name_vertex = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shading_language_420pack.utf8_in_source = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.enhanced_layouts.xfb_block_stride = glcts d3f204f14830639a548746a4c45d452359b8e819
 
 [fixed-tests]
 KHR-GL46.enhanced_layouts.varying_location_limit = mesa 2d87caa279ea319fa89572fb8595a46c05a615c4
