--- a/glcts-test/bsw.conf
+++ b/glcts-test/bsw.conf
@@ -1,21 +1,14 @@
 [expected-failures]
-KHR-GL46.shader_draw_parameters_tests.ShaderDrawArraysParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shader_draw_parameters_tests.ShaderMultiDrawArraysIndirectParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.gl_spirv.spirv_modules_shader_binary_multiple_shader_objects_test = glcts 070595c4dff00b78cde0d5c9dd3cfbc96554b6bc
 KHR-GL46.shader_draw_parameters_tests.MultiDrawArraysIndirectCountParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.shader_draw_parameters_tests.ShaderDrawArraysInstancedParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.shader_draw_parameters_tests.ShaderDrawArraysParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.shader_draw_parameters_tests.ShaderMultiDrawArraysIndirectParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.shader_draw_parameters_tests.ShaderMultiDrawArraysParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.spirv_extensions.spirv_extensions_queries = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.sepshaderobjs.StateInteraction = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.gl_spirv.spirv_modules_shader_binary_multiple_shader_objects_test = glcts 070595c4dff00b78cde0d5c9dd3cfbc96554b6bc
 
 [expected-crashes]
-KHR-GL46.shaders.preprocessor.extensions.invalid_char_in_behavior_fragment = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shaders.preprocessor.extensions.invalid_char_in_name_fragment = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shader_subroutine.multiple_contexts = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shaders.preprocessor.extensions.invalid_char_in_behavior_vertex = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shading_language_420pack.utf8_characters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shaders.preprocessor.extensions.invalid_char_in_name_vertex = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shading_language_420pack.utf8_in_source = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.enhanced_layouts.xfb_block_stride = glcts d3f204f14830639a548746a4c45d452359b8e819
 
 [fixed-tests]
 KHR-GL46.enhanced_layouts.varying_location_limit = mesa 2d87caa279ea319fa89572fb8595a46c05a615c4
@@ -36,4 +29,3 @@ KHR-GL46.shader_ballot_tests.ShaderBallotFunctionBallot = mesa cfcfa0b9cd1b1d563
 KHR-GL46.enhanced_layouts.varying_array_locations = mesa 6d540aa092d5d78dde643af40257444567bf7b95
 KHR-GL46.enhanced_layouts.varying_locations = mesa 6d540aa092d5d78dde643af40257444567bf7b95
 KHR-GL46.enhanced_layouts.varying_structure_locations = mesa 6d540aa092d5d78dde643af40257444567bf7b95
-
