--- a/glcts-test/cfl.conf
+++ b/glcts-test/cfl.conf
@@ -1,19 +1,14 @@
 [expected-failures]
-KHR-GL46.shader_draw_parameters_tests.ShaderDrawArraysParameters = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
-KHR-GL46.shader_draw_parameters_tests.ShaderMultiDrawArraysIndirectParameters = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
+KHR-GL46.gl_spirv.spirv_modules_shader_binary_multiple_shader_objects_test = glcts 070595c4dff00b78cde0d5c9dd3cfbc96554b6bc
 KHR-GL46.shader_draw_parameters_tests.MultiDrawArraysIndirectCountParameters = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
 KHR-GL46.shader_draw_parameters_tests.ShaderDrawArraysInstancedParameters = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
+KHR-GL46.shader_draw_parameters_tests.ShaderDrawArraysParameters = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
+KHR-GL46.shader_draw_parameters_tests.ShaderMultiDrawArraysIndirectParameters = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
 KHR-GL46.shader_draw_parameters_tests.ShaderMultiDrawArraysParameters = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
 KHR-GL46.spirv_extensions.spirv_extensions_queries = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
-KHR-GL46.gl_spirv.spirv_modules_shader_binary_multiple_shader_objects_test = glcts 070595c4dff00b78cde0d5c9dd3cfbc96554b6bc
 
 [expected-crashes]
-KHR-GL46.shaders.preprocessor.extensions.invalid_char_in_behavior_fragment = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
-KHR-GL46.shaders.preprocessor.extensions.invalid_char_in_name_fragment = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
-KHR-GL46.shading_language_420pack.utf8_characters = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
-KHR-GL46.shaders.preprocessor.extensions.invalid_char_in_behavior_vertex = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
-KHR-GL46.shaders.preprocessor.extensions.invalid_char_in_name_vertex = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
-KHR-GL46.shading_language_420pack.utf8_in_source = mesa 59fb59ad54d368683d5cc3b149f021452bddc05f
+KHR-GL46.enhanced_layouts.xfb_block_stride = glcts d3f204f14830639a548746a4c45d452359b8e819
 
 [fixed-tests]
 KHR-GL46.enhanced_layouts.varying_location_aliasing_with_mixed_interpolation = mesa 13652e7516a3ef75c5ae75ffa5c7f048629bf772
@@ -32,4 +27,3 @@ KHR-GL46.enhanced_layouts.xfb_stride_of_empty_list_and_api = mesa 9c53b80ff94c60
 KHR-GL46.enhanced_layouts.varying_array_locations = mesa 6d540aa092d5d78dde643af40257444567bf7b95
 KHR-GL46.enhanced_layouts.varying_locations = mesa 6d540aa092d5d78dde643af40257444567bf7b95
 KHR-GL46.enhanced_layouts.varying_structure_locations = mesa 6d540aa092d5d78dde643af40257444567bf7b95
-
