--- a/glcts-test/hsw.conf
+++ b/glcts-test/hsw.conf
@@ -1,47 +1,31 @@
 [expected-failures]
-KHR-GL46.shader_draw_parameters_tests.ShaderDrawArraysParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shader_draw_parameters_tests.ShaderMultiDrawArraysIndirectParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.sample_variables.mask.rgba32f.samples_8.mask_3 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shader_draw_parameters_tests.MultiDrawArraysIndirectCountParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.copy_image.samples_mismatch = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.direct_state_access.renderbuffers_storage_multisample = mesa 113a6a639fec88631411d4a53d8e68cdebe15865
+KHR-GL46.gl_spirv.spirv_modules_shader_binary_multiple_shader_objects_test = glcts 070595c4dff00b78cde0d5c9dd3cfbc96554b6bc
 KHR-GL46.sample_variables.mask.rgba32f.samples_8.mask_0 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.sample_variables.mask.rgba32f.samples_8.mask_1 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.sample_variables.mask.rgba32f.samples_8.mask_2 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shader_draw_parameters_tests.ShaderDrawArraysInstancedParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.sample_variables.mask.rgba32f.samples_8.mask_6 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.sample_variables.mask.rgba32f.samples_8.mask_7 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.sample_variables.mask.rgba32f.samples_8.mask_3 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.sample_variables.mask.rgba32f.samples_8.mask_4 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.sample_variables.mask.rgba32f.samples_8.mask_5 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.sample_variables.mask.rgba32f.samples_8.mask_6 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.sample_variables.mask.rgba32f.samples_8.mask_7 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.sample_variables.mask.rgba32f.samples_8.mask_zero = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.copy_image.samples_mismatch = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.arrays_of_arrays_gl.SubroutineFunctionCalls2 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.shader_draw_parameters_tests.MultiDrawArraysIndirectCountParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.shader_draw_parameters_tests.ShaderDrawArraysInstancedParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.shader_draw_parameters_tests.ShaderDrawArraysParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.shader_draw_parameters_tests.ShaderMultiDrawArraysIndirectParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.shader_draw_parameters_tests.ShaderMultiDrawArraysParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.texture_swizzle.functional = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.spirv_extensions.spirv_extensions_queries = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.texture_swizzle.functional = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.vertex_attrib_binding.basic-inputL-case1 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.direct_state_access.renderbuffers_storage_multisample = mesa 113a6a639fec88631411d4a53d8e68cdebe15865
-KHR-GL46.gl_spirv.spirv_modules_shader_binary_multiple_shader_objects_test = glcts 070595c4dff00b78cde0d5c9dd3cfbc96554b6bc
 
 [expected-crashes]
 KHR-GL46.direct_state_access.textures_compressed_subimage = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shaders.preprocessor.extensions.invalid_char_in_behavior_fragment = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.arrays_of_arrays_gl.SubroutineArgumentAliasing2 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.arrays_of_arrays_gl.InteractionArgumentAliasing4 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.arrays_of_arrays_gl.InteractionArgumentAliasing5 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.arrays_of_arrays_gl.InteractionArgumentAliasing6 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shaders.preprocessor.extensions.invalid_char_in_name_fragment = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shader_subroutine.multiple_contexts = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.arrays_of_arrays_gl.InteractionArgumentAliasing2 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.arrays_of_arrays_gl.SubroutineArgumentAliasing3 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.arrays_of_arrays_gl.InteractionArgumentAliasing3 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.texture_size_promotion.functional = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.arrays_of_arrays_gl.InteractionArgumentAliasing1 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.direct_state_access.textures_storage_multisample_3d_rgb32f = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.arrays_of_arrays_gl.SubroutineArgumentAliasing4 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shaders.preprocessor.extensions.invalid_char_in_behavior_vertex = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shading_language_420pack.utf8_characters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.direct_state_access.textures_storage_multisample_2d_rgb32f = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shaders.preprocessor.extensions.invalid_char_in_name_vertex = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.shading_language_420pack.utf8_in_source = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.direct_state_access.textures_storage_multisample_3d_rgb32f = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.texture_size_promotion.functional = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
+KHR-GL46.enhanced_layouts.xfb_block_stride = glcts d3f204f14830639a548746a4c45d452359b8e819
 
 [fixed-tests]
 KHR-GL46.shading_language_420pack.binding_image_default = glcts d4f86c3ded810bca1a6bfbbe41800aee7ad515f5
@@ -65,4 +49,3 @@ KHR-GL46.enhanced_layouts.varying_locations = mesa 6d540aa092d5d78dde643af402574
 KHR-GL46.enhanced_layouts.varying_structure_locations = mesa 6d540aa092d5d78dde643af40257444567bf7b95
 KHR-GL46.gpu_shader_fp64.fp64.max_uniform_components = mesa 8620f7ebbc763dc1bbbc825d31cacfdd84433e05
 KHR-GL46.enhanced_layouts.varying_location_limit = glcts 43ff714ddd948a771a6690e474ce1ee9bcf9aec5
-
