glcts: record tests that were fixed after mesa 17.3 branchpoint

--- a/glcts-test/kbl.conf
+++ b/glcts-test/kbl.conf
@@ -11,4 +11,6 @@ KHR-GL46.spirv_extensions.spirv_extensions_queries = glcts 72aa38edfac504bf285df
 
 [fixed-tests]
 KHR-GL46.enhanced_layouts.xfb_block_stride = mesa 9d53ccccb251d21f9291abaa3a28a41d06ce8c91
-
+KHR-GL46.enhanced_layouts.varying_location_aliasing_with_mixed_interpolation mesa_post_17_3 c85d64cf67827e1fce81976db092c445b1d3fffd
+KHR-GL46.enhanced_layouts.varying_block_automatic_member_locations mesa_post_17_3 c85d64cf67827e1fce81976db092c445b1d3fffd
+KHR-GL46.enhanced_layouts.varying_location_aliasing_with_mixed_auxiliary_storage mesa_post_17_3 c85d64cf67827e1fce81976db092c445b1d3fffd
