jenkins updates due to bisect of mesa

--- a/glcts-test/hsw.conf
+++ b/glcts-test/hsw.conf
@@ -17,7 +17,6 @@ KHR-GL46.shader_draw_parameters_tests.ShaderDrawArraysParameters = glcts 72aa38e
 KHR-GL46.shader_draw_parameters_tests.ShaderMultiDrawArraysIndirectParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.shader_draw_parameters_tests.ShaderMultiDrawArraysParameters = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.spirv_extensions.spirv_extensions_queries = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
-KHR-GL46.texture_swizzle.functional = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 KHR-GL46.vertex_attrib_binding.basic-inputL-case1 = glcts 72aa38edfac504bf285dffc7edd2d263039730d6
 
 [expected-crashes]
@@ -51,4 +50,5 @@ KHR-GL46.enhanced_layouts.xfb_block_stride = mesa 9d53ccccb251d21f9291abaa3a28a4
 KHR-GL46.direct_state_access.textures_storage_multisample_2d_rgb32f = mesa 02720f8d249a65d952888b6028a0b8ff0f9a42e4
 KHR-GL46.direct_state_access.textures_storage_multisample_3d_rgb32f = mesa 02720f8d249a65d952888b6028a0b8ff0f9a42e4
 KHR-GL46.texture_size_promotion.functional = mesa 02720f8d249a65d952888b6028a0b8ff0f9a42e4
+KHR-GL46.texture_swizzle.functional = mesa 02720f8d249a65d952888b6028a0b8ff0f9a42e4
 
